--- a/partials/stock/list.html
+++ b/partials/stock/list.html
@@ -1,5 +1,8 @@
-<p>Buscar: <input type="text" ng-model="searchProduct"></p>
-<div>
-    <grilla-De-Productos></grilla-De-Productos>
-    <div class="botonera-directive"></div>
+<div ng-app="stockModule">
+	<p>Buscar : <input type="text" ng-model="searchProduct"></p>
+
+	<div>
+		<grilla-De-Productos></grilla-De-Productos> 
+		<botonera-directive></botonera-directive>		
+	</div>
 </div>
