--- a/partials/stock/list.html
+++ b/partials/stock/list.html
@@ -1,8 +1,8 @@
 <div ng-app="stockModule">
-	<p>Buscar : <input type="text" ng-model="searchProduct"></p>
+	<p>Buscar : <input type="text" class="form-control" ng-model="searchProduct"></p>
 
 	<div>
-		<grilla-De-Productos></grilla-De-Productos> 
-		<botonera-directive></botonera-directive>		
+		<crud-actions></crud-actions> 
+		<product-grid></product-grid>		
 	</div>
 </div>
